--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_purchased_scores.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_purchased_scores.html
@@ -21,7 +21,10 @@
                 <div class="card-body">
                     <h4 class="card-title">{{ score.title }}</h4>
                     <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
+                    <div class="d-flex justify-content-between align-items-center">
                     <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
+                    <a href="{% url 'sheetmusic:visualize_score' pk=score.pk %}" class="btn btn-warning ms-0">Visualize</a>
+                    </div>
                 </div>
             </div>
         {% endfor %}
