--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -13,7 +13,10 @@
     <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-md-4">
-              <h2>@{{ profile.user.username }}</h2>
+              <h2>@{{ profile.user.username }}
+                  {% if profile.id == user_profile.id %}
+                      <a class="btn btn-dark text-white" href="{% url 'sheetmusic:update_profile' profile.id %}"><h5 class="mt-1 mb-1">Update Profile</h5></a>
+                  {% endif %}</h2>
                 <img src="{{profile.profile_image.url}}" class="rounded-circle" alt="media/profiles/profile_imgs/profile-default.1024x1023.png" width="150" height="150" style="margin-left: 20px;">
             </div>
 
