--- a/PianoBazaar/sheetmusic/templates/sheetmusic/checkout.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/checkout.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -15,7 +16,7 @@
 
 
                     <tbody>
-                        {% for score in profile.shopping_cart.all %}
+                        {% for score in user_profile.shopping_cart.all %}
                         <tr> {#table-row#}
                             <td>
                                 <div class="d-flex justify-content-between">
@@ -48,19 +49,23 @@
 
             <div class="col-md-3 offset-1">
                 <p class="h3">Billing Information</p>
-                {% crispy form %}
-
-                <br>
-
-                <p class="h3 mt-3 mb-3">Total: {{ total_price }} €</p>
-
-                <label for="payment-method" class="h4 form-label mt-3">Select payment method
+                <form method="post" id="checkout-form">
+                    {% csrf_token %}
+                    
+                    {{ form | crispy }} 
+                    
+                    <p class="h3 mt-5 mb-3">Total: {{ total_price }} €</p>
+                    
+                    <label for="payment-method" class="h4 form-label mt-3">Select payment method</label>
                     <select class="form-select mt-2" id="payment-method">
                       <option>Paypal</option>
                       <option>Credit Card</option>
                       <option>Bank Transfer</option>
                     </select>
-                </label>
+                    
+                    <button type="submit" class="btn btn-primary mt-4">Buy Now</button>
+                </form>
+                <br>
             </div>
         </div>
 {% endblock %}
