--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_detail.html
@@ -29,31 +29,33 @@
                     <li class="list-group-item"><strong>Format:</strong> PDF</li>
                 </ul>
             
-                <div class="d-flex align-items-center mb-3 mt-3">
-                
-                    {% if user.is_authenticated %}
-                        <a href="{% url 'sheetmusic:pre_checkout' score_pk=object.pk %}" class="btn btn-primary me-2"><p class="h5 mb-1 mt-1" style="height: 23px">Buy</p></a>
-                        
-                        {% if object in user_profile.shopping_cart.all %}
-                             <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
-                                <p class="h5 d-inline">Remove from Cart </p>
-                                <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
-                             </a>
+                <div class="d-flex align-items-center mb-4 mt-4">
+                        {% if user.is_authenticated %}
+                            {% if object not in user_profile.purchased_scores.all %}
+                                <a href="{% url 'sheetmusic:pre_checkout' score_pk=object.pk %}" class="btn btn-primary me-2"><p class="h5 mb-1 mt-1" style="height: 23px">Buy</p></a>
+
+                                {% if object in user_profile.shopping_cart.all %}
+                                     <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
+                                        <p class="h5 d-inline">Remove from Cart </p>
+                                        <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
+                                     </a>
+                                    {% else %}
+                                    <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
+                                        <p class="h5 d-inline">Add to cart </p>
+                                        <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
+                                     </a>
+                                {% endif %}
                             {% else %}
+                                <a href="{% url 'sheetmusic:visualize_score' pk=object.pk %}" class="btn btn-primary"><p class="h5 mb-1 mt-1" style="height: 23px">Visualize sheetmusic</p></a>
+                            {% endif %}
+                        {% else %}
+                            <a href="{% url 'login' %}?next=/sheetmusic/detail/{{ object.pk }}" class="btn btn-primary me-2"><p class="h5 mb-1 mt-1" style="height: 23px">Buy</p></a>
+
                             <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
                                 <p class="h5 d-inline">Add to cart </p>
                                 <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
-                             </a>
+                            </a>
                         {% endif %}
-                    {% else %}
-                        <a href="{% url 'login' %}?next=/sheetmusic/detail/{{ object.pk }}" class="btn btn-primary me-2"><p class="h5 mb-1 mt-1" style="height: 23px">Buy</p></a>
-                        
-                        <a class="btn btn-success text-white ms-4" href="{% url 'sheetmusic:add_score_to_shopping_cart' score_pk=object.pk %}">
-                            <p class="h5 d-inline">Add to cart </p>
-                            <i class="fa-solid fa-cart-shopping d-inline" style="font-size: 1.8rem; color: white"></i>
-                        </a>
-                    {% endif %}
-                
                 </div>
             
                 <!-- Video -->
