sales insights, v, path, temp

--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_liked_scores.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_liked_scores.html
@@ -10,8 +10,9 @@
                         
                 <li class="page-item"><a class="page-link" href="{% url 'sheetmusic:arranger' profile.pk %}" >My Sheet music</a></li>
                 <li class="page-item active"><a class="page-link" href="">Liked scores</a></li>
-                <li class="page-item"><a class="page-link" href="{% url 'sheetmusic:arranger_purchased_scores' profile.pk %}">Purchased scores</a></li>
-                
+                {% if profile.pk == user_profile.pk %}
+                    <li class="page-item"><a class="page-link" href="{% url 'sheetmusic:arranger_purchased_scores' profile.pk %}">Purchased scores</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
