--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -78,7 +78,7 @@
                       </button>
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:arranger' pk=user_profile.id %}">My Profile</a></li>
-                        <li><a class="dropdown-item nav-link" href="#">Sales Insights</a></li>
+                        <li><a class="dropdown-item nav-link" href="{% url 'sheetmusic:sales_insights' pk=user_profile.id %}">Sales Insights</a></li>
                         <li><a class="dropdown-item nav-link" href="{% url 'logout' %}">Logout</a></li>
                       </ul>
                     </div>
