--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -29,7 +29,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <a class="navbar-brand ms-4 me-5" href="/sheetmusic">🎵 PianoBazaar</a>
-        <form id="search-form" method="get" action="" class="d-flex">
+        <form id="search-form" method="get" action="/sheetmusic/" class="d-flex">
             <label>
                 <input type="text" name="q" placeholder="Search..." value="{{ query }}">
             </label>
