--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="p-5 bg-primary text-white text-center rounded-1">
+    <div class="p-4 bg-primary text-white text-center rounded-1 border border-3">
         {% if profile.user.first_name and profile.user.last_name %}
             <h1>{{ profile.user.first_name }} {{ profile.user.last_name }}'s profile</h1>
         {% else %}
@@ -20,7 +20,7 @@
                 <img src="{{profile.profile_image.url}}" class="rounded-circle" alt="media/profiles/profile_imgs/profile-default.1024x1023.png" width="150" height="150" style="margin-left: 20px;">
             </div>
 
-            <div class="col-md-8">
+            <div class="col-md-8 border border-3 rounded-5 mb-3">
               <h2>About me</h2>
               <h5>{{ profile.bio }}</h5>
                 <hr class="d-sm-none">
@@ -30,39 +30,41 @@
 
         <div class="row">
             <div class="col-md-4">
-                <h3 class="mt-5 bg-primary rounded-1 text-white">My Socials</h3>
-            {% if profile.youtube_account_id or profile.instagram_account_id or profile.x_account_id %}
-              <ul class="nav nav-pills flex-column">
-                <li class="nav-item">
-                    {% if profile.youtube_account_id %}
-                  <a class="nav-link mt-2" href="https://www.youtube.com/@{{ profile.youtube_account_id }}/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-youtube" style="color: #FF0000; font-size: 1.5rem" ></i><h5 class="d-inline"> / {{ profile.youtube_account_id }}</h5>
-                  </a>
-                    {% endif %}
-                </li>
-                <li class="nav-item">
-                    {% if profile.instagram_account_id %}
-                  <a class="nav-link mt-2" href="https://www.instagram.com/{{ profile.instagram_account_id }}/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-instagram" style="color: #C13584; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ profile.instagram_account_id }}</h5>
-                  </a>
-                    {% endif %}
-                </li>
-                <li class="nav-item">
-                    {% if profile.x_account_id %}
-                  <a class="nav-link" href="https://www.x.com/{{ profile.x_account_id }}/" target="_blank" rel="noopener noreferrer">
-                      <i class="fab fa-x x-icon" style="color: #000000; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ profile.x_account_id }}</h5>
-                  </a>
-                    {% endif %}
-                </li>
-              </ul>
-            {% else %}
-              <h5 class="mt-3"> {{ profile.user.username }} didn't link any social. 😔</h5>
-                <br>
-            {% endif %}
+                <div class="mt-5 border border-3 bg-primary text-white rounded-1">
+                    <h3 class="ms-1 mt-1">My Socials</h3>
+                </div>
+                {% if profile.youtube_account_id or profile.instagram_account_id or profile.x_account_id %}
+                  <ul class="nav nav-pills flex-column">
+                    <li class="nav-item">
+                        {% if profile.youtube_account_id %}
+                      <a class="nav-link mt-2" href="https://www.youtube.com/@{{ profile.youtube_account_id }}/" target="_blank" rel="noopener noreferrer">
+                          <i class="fab fa-youtube" style="color: #FF0000; font-size: 1.5rem" ></i><h5 class="d-inline"> / {{ profile.youtube_account_id }}</h5>
+                      </a>
+                        {% endif %}
+                    </li>
+                    <li class="nav-item">
+                        {% if profile.instagram_account_id %}
+                      <a class="nav-link mt-2" href="https://www.instagram.com/{{ profile.instagram_account_id }}/" target="_blank" rel="noopener noreferrer">
+                          <i class="fab fa-instagram" style="color: #C13584; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ profile.instagram_account_id }}</h5>
+                      </a>
+                        {% endif %}
+                    </li>
+                    <li class="nav-item">
+                        {% if profile.x_account_id %}
+                      <a class="nav-link" href="https://www.x.com/{{ profile.x_account_id }}/" target="_blank" rel="noopener noreferrer">
+                          <i class="fab fa-x x-icon" style="color: #000000; font-size: 1.5rem"></i><h5 class="d-inline"> / {{ profile.x_account_id }}</h5>
+                      </a>
+                        {% endif %}
+                    </li>
+                  </ul>
+                {% else %}
+                  <h5 class="mt-3"> {{ profile.user.username }} didn't link any social. 😔</h5>
+                    <br>
+                {% endif %}
             <br><br>
             </div>
 
-            <div class="col-md-8">
+            <div class="col-md-8 border border-3 rounded-5">
               <h2 class="mt-5">My Mantra</h2>
                 <h5>"{{ profile.mantra }}"</h5>
             </div>
@@ -70,7 +72,7 @@
     
         {% block selection %}
             <div class="row mt-3">
-                <div class="col-md-12 mt-5 bg-primary text-white rounded-1">
+                <div class="col-md-12 mt-5 text-white rounded-1 bg-dark">
                     <ul class="pagination pagination-lg">
                         
                             <li class="page-item active"><a class="page-link" href="">My Sheet music</a></li>
@@ -89,7 +91,7 @@
                         <div class="card-body">
                         <h4 class="card-title">{{ score.title }}</h4>
                         <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
-                        
+
                                 <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
                             {% if profile.pk == user_profile.pk %}
                                 <a href="{% url 'sheetmusic:visualize_score' pk=score.pk %}" class="btn btn-warning ms-1">Visualize</a>
