--- a/PianoBazaar/static/css/style.css
+++ b/PianoBazaar/static/css/style.css
@@ -140,22 +140,22 @@ footer.visible {
     background-color: white;
     padding: 10px 0;
     border-radius: 5px;
-    /*padding: 15px 0; !* Aggiungi verticale all'interno dei link *!*/
 }
 
 .pagination .page-item.active .page-link {
-    background-color: darkorange; /* Colore per il link attivo */
+    background-color: #212529; /* Colore per il link attivo */
     color: white; /* Colora il testo di bianco */
+    border-color: black;
     display: block;
 }
 
 .pagination .page-item .page-link:hover {
-    background-color: sandybrown; /* Cambia colore al passaggio del mouse */
+    background-color: #43494f; /* Cambia colore al passaggio del mouse */
     color: white;
 }
 
 .pagination .page-item.active .page-link:hover {
-    background-color: darkorange; /* Colore per il link attivo */
+    background-color: #212529; /* Colore per il link attivo */
     color: white; /* Colora il testo di bianco */
     display: block;
 }
