--- a/PianoBazaar/sheetmusic/templates/sheetmusic/score_search_results.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/score_search_results.html
@@ -22,11 +22,11 @@
                             <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
                         
                             {% if score in user_profile.liked_scores.all %}
-                                <a class="" href="{% url 'sheetmusic:add_liked_score' score_pk=score.pk %}">
+                                <a class="" href="{% url 'sheetmusic:toggle_like' score_pk=score.pk %}">
                                     <i class="fa-solid fa-heart me-3" style="font-size: 1.5rem; color: red"></i>
                                 </a>
                             {% else %}
-                                <a class="" href="{% url 'sheetmusic:add_liked_score' score_pk=score.pk %}">
+                                <a class="" href="{% url 'sheetmusic:toggle_like' score_pk=score.pk %}">
                                     <i class="fa-regular fa-heart me-3" style="font-size: 1.5rem; color: grey"></i>
                                 </a>
                             {% endif %}
@@ -53,7 +53,7 @@
                         
                         <div class="d-flex justify-content-between align-items-center">
                             <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
-                            <a class="" href="{% url 'sheetmusic:add_liked_score' score_pk=score.pk %}">
+                            <a class="" href="{% url 'sheetmusic:toggle_like' score_pk=score.pk %}">
                                 <i class="fa-regular fa-heart me-3" style="font-size: 1.5rem; color: grey"></i>
                             </a>
                         </div>
