--- a/PianoBazaar/static/css/style.css
+++ b/PianoBazaar/static/css/style.css
@@ -160,11 +160,34 @@ footer.visible {
     display: block;
 }
 
-.like-icon {
-    transition: transform 0.2s ease, color 0.2s ease;
+.particle-container {
+    position: absolute;
+    top: 94%;
+    left: 88%;
+    width: 0;
+    height: 0;
+    overflow: visible;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
 }
 
-.like-icon.liked {
-    transform: scale(1.3);
-    color: red;
+.particle {
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: red;
+    opacity: 1;
+    animation: particle-explode 0.6s ease-out forwards;
+}
+
+@keyframes particle-explode {
+    0% {
+        transform: translate(0, 0) scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: translate(calc(100px * (var(--x))), calc(100px * (var(--y)))) scale(0);
+        opacity: 0;
+    }
 }
