--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_liked_scores.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_liked_scores.html
@@ -24,10 +24,80 @@
                 <div class="card-body">
                     <h4 class="card-title">{{ score.title }}</h4>
                     <p class="card-text">a {{ score.score_type }} by {{ score.arranger }} in {{ score.published_key }}.</p>
-                    <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
+                
+                    <div class="d-flex justify-content-between align-items-center">
+                            <a href="{% url 'sheetmusic:detail' pk=score.pk %}" class="btn btn-primary">See score</a>
+                        
+                            {% if score in user_profile.liked_scores.all %}
+                                <a class="like-btn" data-score-id="{{ score.pk }}" href="{% url 'sheetmusic:toggle_like' score_pk=score.pk %}">
+                                    <i class="fa-solid fa-heart me-3 like-icon" style="font-size: 1.5rem; color: red"></i>
+                                <div class="particle-container"></div>
+                                </a>
+                            {% else %}
+                                <a class="like-btn" data-score-id="{{ score.pk }}"  href="{% url 'sheetmusic:toggle_like' score_pk=score.pk %}">
+                                    <i class="fa-regular fa-heart me-3 like-icon" style="font-size: 1.5rem; color: grey"></i>
+                                <div class="particle-container"></div>
+                                </a>
+                            {% endif %}
+                    </div>
                 </div>
             </div>
         {% endfor %}
     </div>
+    <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                const likeButtons = document.querySelectorAll('.like-btn');
+            
+                likeButtons.forEach(button => {
+                    button.addEventListener('click', function (event) {
+                        event.preventDefault();
+                        
+                        const csrftoken = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
+                        const scoreId = this.getAttribute('data-score-id');
+                        const likeIcon = this.querySelector('.like-icon');
+                        const particleContainer = this.querySelector('.particle-container');
+                        
+                        createParticles(particleContainer);
+                        
+                        const xhttp = new XMLHttpRequest();
+                        xhttp.open('POST', `/sheetmusic/toggle-like/${scoreId}/`, true);
+                        xhttp.setRequestHeader('X-CSRFToken', csrftoken);
+                        xhttp.onload = function () {
+                            if (xhttp.status === 200) {
+                                const response = JSON.parse(xhttp.responseText);
+                                if (response.liked) {
+                                    likeIcon.classList.remove('fa-regular');
+                                    likeIcon.classList.add('fa-solid');
+                                    likeIcon.style.color = 'red';
+                                    
+                                } else {
+                                    likeIcon.classList.remove('fa-solid');
+                                    likeIcon.classList.add('fa-regular');
+                                    likeIcon.style.color = 'grey';
+                                }
+                            } else {
+                                console.error('Errore durante la richiesta');
+                            }
+                        };
+                    xhttp.send();
+                    });
+                });
+                function createParticles(container) {
+                    for (let i = 0; i < 10; i++) {
+                        const particle = document.createElement('div');
+                        particle.classList.add('particle');
+                        
+                        // Genera una posizione casuale per l'esplosione
+                        particle.style.setProperty('--x', (Math.random() - 0.5) * 2);  // Valori tra -1 e 1
+                        particle.style.setProperty('--y', (Math.random() - 0.5) * 2);
+                        
+                        container.appendChild(particle);
+                        
+                        // Rimuove le particelle dopo l'animazione
+                        particle.addEventListener('animationend', () => particle.remove());
+                    }
+                }
+            });
+        </script>
         
 {% endblock %}
