shadow on scores on profiles

--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail.html
@@ -86,7 +86,7 @@
             
             <div id="card-container" class="d-flex flex-wrap justify-content-left mt-4 p-0">
                 {% for score in my_scores_list %}
-                    <div class="card m-2">
+                    <div class="card m-2 custom-card-shadow">
                     <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
                         <div class="card-body">
                         <h4 class="card-title">{{ score.title }}</h4>
