--- a/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_liked_scores.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/arranger_detail_liked_scores.html
@@ -19,7 +19,7 @@
     
     <div id="card-container" class="d-flex flex-wrap justify-content-left mt-4 p-0">
         {% for score in profile.liked_scores.all %}
-            <div class="card m-2">
+            <div class="card m-2 custom-card-shadow">
                 <img class="card-img-top" src="{{ score.cover.url }}" alt="{{ score.cover }}" style="width:100%">
                 <div class="card-body">
                     <h4 class="card-title">{{ score.title }}</h4>
