profile creation bug fixed (automatically creates associated profile when user is created now)

--- a/PianoBazaar/sheetmusic/templates/sheetmusic/profile_update.html
+++ b/PianoBazaar/sheetmusic/templates/sheetmusic/profile_update.html
@@ -21,5 +21,12 @@
         </div>
     </div>
     <br><br><br><br>
-
+    <style>
+        label[for$="-clear_id"] {
+            margin-left: 10px;
+        }
+        input[type="checkbox"][name$="-clear"] {
+            margin-left: 10px;
+        }
+    </style>
 {% endblock %}
