--- a/PianoBazaar/templates/registration/profile_create.html
+++ b/PianoBazaar/templates/registration/profile_create.html
@@ -22,6 +22,15 @@
                 </form>
             </div>
         </div>
+
     </div><br><br><br><br>
+    <style>
+        label[for$="-clear_id"] {
+            display: none;
+        }
+        input[type="checkbox"][name$="-clear"] {
+            display: none;
+        }
+    </style>
 
 {% endblock %}
