--- a/PianoBazaar/templates/base.html
+++ b/PianoBazaar/templates/base.html
@@ -56,7 +56,7 @@
                     </li>
                 {% else %}
                     <li class="nav-item ms-5">
-                        <a class="nav-link btn btn-primary" href="{% url 'sheetmusic:score_upload' %}">Upload score</a>
+                        <a class="nav-link btn btn-primary" href="{% url 'login' %}?next=/sheetmusic/upload scores/">Upload score</a>
                     </li>
                 {% endif %}
 
